eoc/eoc-rs/crates/eoc-embeddings/tests/snapshots/request_body_snapshots__jina_body.snap
---
source: crates/eoc-embeddings/tests/request_body_snapshots.rs
expression: body
---
{
  "input": [
    "alpha"
  ],
  "model": "jina-embeddings-v3"
}
