eoc/eoc-rs/crates/eoc-embeddings/tests/snapshots/request_body_snapshots__openai_body.snap
---
source: crates/eoc-embeddings/tests/request_body_snapshots.rs
expression: body
---
{
  "encoding_format": "float",
  "input": [
    "alpha",
    "beta"
  ],
  "model": "text-embedding-3-small"
}
