eoc/eoc-rs/crates/eoc-embeddings/tests/snapshots/request_body_snapshots__voyage_body.snap
---
source: crates/eoc-embeddings/tests/request_body_snapshots.rs
expression: body
---
{
  "input": [
    "alpha"
  ],
  "input_type": "document",
  "model": "voyage-3"
}
